Fix bugs, adaptive, icons, imgs

--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like active"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like active"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -197,7 +197,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -235,7 +235,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -273,7 +273,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle active"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -311,7 +311,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -349,7 +349,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -387,7 +387,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -425,7 +425,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -463,7 +463,7 @@
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
 											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
 										</div>
 									</div>
 								</div>
@@ -641,18 +641,18 @@
 				</div>
 				<!-- testimonials end -->
 				<!-- banner -->
-				<div class="banner">
-					<div class="banner__bg ibg">
+				<div class="information_01">
+					<div class="information_01__bg ibg">
 						<img src="img/information_01/01.jpg" alt="">
 					</div>
-					<div class="banner__content">
-						<div class="banner__text">
+					<div class="information_01__content">
+						<div class="information_01__text">
 							30% discount for all products in the initial purchase.
 							<span>Applies to new members</span>
 						</div>
-						<div class="banner__box">
-							<a class="banner__box-btn banner__box-btn--first btn" href="#">Read more</a>
-							<a class="banner__box-btn banner__box-btn--second btn" href="#">Join now</a>
+						<div class="information_01__box">
+							<a class="information_01__box-btn information_01__box-btn--first btn" href="#">Read more</a>
+							<a class="information_01__box-btn information_01__box-btn--second btn" href="#">Join now</a>
 						</div>
 					</div>
 				</div>
@@ -677,7 +677,7 @@
 								</div>
 								<div class="news__item-body">
 									<a class="news__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
+									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</div>
 									<a class="news__item-btn btn" href="#">Read more</a>
 								</div>
 							</div>
