--- a/app/_header.html
+++ b/app/_header.html
@@ -16,7 +16,7 @@
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Contact us</a></li>
-						<li class="menu__item"><button class="menu__link menu__link-btn"><img src="img/icons/search.png" alt=""></button></li>
+						<li class="menu__item"><button class="menu__link menu__link-btn"><i class="icon-search"></i></button></li>
 					</ul>
 				</nav>
 
