Add menu-dropdown and search

--- a/app/_header.html
+++ b/app/_header.html
@@ -10,13 +10,64 @@
 				</div>
 				<nav class="menu">
 					<ul class="menu__list">           
-						<li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+						<li class="menu__item menu__item-dropdown"><a class="menu__link" href="#">Home</a>
+							<ul class="menu__submenu">
+								<div class="menu__submenu-row">
+									<div class="menu__submenu-column">
+										<ul>
+											<li class="menu__submenu-title">MORE INFO</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+										</ul>
+									</div>
+									<div class="menu__submenu-column">
+										<ul>
+											<li class="menu__submenu-title">MORE INFO</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+										</ul>
+									</div>
+									<div class="menu__submenu-column">
+										<ul>
+											<li class="menu__submenu-title">MORE INFO</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+										</ul>
+									</div>
+									<div class="menu__submenu-column">
+										<ul>
+											<li class="menu__submenu-title">MORE INFO</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+										</ul>
+									</div>
+								</div>
+							</ul>
+						</li>
 						<li class="menu__item"><a class="menu__link" href="#">Shop</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Contact us</a></li>
-						<li class="menu__item"><button class="menu__link menu__link-btn"><i class="icon-search"></i></button></li>
+						<li class="menu__item"><a class="menu__link menu__link-btn menu__link-search"><i class="icon-search"></i></a></li>
+						<div class="search">
+							<form class="search__form" action="#">
+								<input class="search__form-text" type="text" placeholder="Search entire store here">
+								<button class="search__form-btn">search</button>
+							</form>
+						</div>
 					</ul>
 				</nav>
 
