Add block search and setting

--- a/app/_header.html
+++ b/app/_header.html
@@ -15,43 +15,45 @@
 								<div class="menu__submenu-row">
 									<div class="menu__submenu-column">
 										<ul>
-											<li class="menu__submenu-title">MORE INFO</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__submenu-title">product types</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">simple product</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">grouped product</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">variable product</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">external/adffiliate product</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">product tag</a></li>
 										</ul>
 									</div>
 									<div class="menu__submenu-column">
 										<ul>
-											<li class="menu__submenu-title">MORE INFO</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__submenu-title">shop pages</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">cart</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">checkout</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">my account</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">wishlist</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Log In</a></li>
 										</ul>
 									</div>
 									<div class="menu__submenu-column">
 										<ul>
-											<li class="menu__submenu-title">MORE INFO</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__submenu-title">shop categories</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">skirts</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">women category</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">tops</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">blouses</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">sport bags</a></li>
 										</ul>
 									</div>
-									<div class="menu__submenu-column">
+<!-- 									<div class="menu__submenu-column">
 										<ul>
-											<li class="menu__submenu-title">MORE INFO</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Terms & conditions</a></li>
+											<li class="menu__submenu-title">shop shortcodes</li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Product Tabs </a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Products</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Slider</a></li>
+											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Ajax cart</a></li>
 										</ul>
+									</div> -->
+									<div class="menu__submenu-column">
+										<img class="menu__submenu-img" src="img/01.jpg" alt="">
 									</div>
 								</div>
 							</ul>
@@ -61,20 +63,67 @@
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Contact us</a></li>
-						<li class="menu__item"><a class="menu__link menu__link-btn menu__link-search"><i class="icon-search"></i></a></li>
+						<li class="menu__item menu__item-search"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
 						<div class="search">
 							<form class="search__form" action="#">
 								<input class="search__form-text" type="text" placeholder="Search entire store here">
 								<button class="search__form-btn">search</button>
 							</form>
 						</div>
+						</li>
 					</ul>
 				</nav>
 
 				<div class="basket">
 					<div class="basket__setting">
-						<img src="img/icons/settings.png" alt="">
-						<span>Setting</span>
+						<div class="basket__setting-icon">
+							<i class="icon-cog"></i>
+							<span class="basket__setting-title">Setting</span>
+							<i class="icon-angle-down"></i>
+						</div>
+						<div class="setting">
+							<div class="setting__row">
+								<div class="setting__column setting__column--black">
+									<form action="#" class="setting__form">
+										<input class="setting__form-text" type="text" placeholder="Your Email" required>
+										<input class="setting__form-password" type="password" placeholder="Password" required>
+										<label class="setting__form-label">
+											<input class="setting__form-checkbox" type="checkbox">
+											Remember me
+										</label>
+										 <button class="setting__form-btn btn">login</button>
+										 <a class="setting__form-forgot" href="#">Forgot password</a>
+									</form>
+								</div>
+								<div class="setting__column setting__column--white">
+									<div class="setting__lang">
+										<div class="setting__lang-title">language:</div>
+										<ul class="setting__lang-list">
+											<li class="setting__lang-item"><a class="setting__lang-link active" href="#"><img src="img/icons/flag.png" alt=""></a></li>
+											<li class="setting__lang-item"><a class="setting__lang-link" href="#"><img src="img/icons/russia.png" alt=""></a></li>
+											<li class="setting__lang-item"><a class="setting__lang-link" href="#"><img src="img/icons/germany.png" alt=""></a></li>
+											<li class="setting__lang-item"><a class="setting__lang-link" href="#"><img src="img/icons/spain.png" alt=""></a></li>
+										</ul>
+									</div>
+									<div class="setting__currency">
+										<div class="setting__currency-title">currency:</div>
+										<ul class="setting__currency-list">
+											<li class="setting__currency-item"><a href="#" class="setting__currency-link active"><i class="icon-euro"></i></a></li>
+											<li class="setting__currency-item"><a href="#" class="setting__currency-link"><i class="icon-dollar"></i></a></li>
+											<li class="setting__currency-item"><a href="#" class="setting__currency-link"><i class="icon-pound"></i></a></li>
+										</ul>
+									</div>
+									<div class="setting__nav">
+										<ul class="setting__nav-list">
+											<li class="setting__nav-item"><a href="#" class="setting__nav-link"><i class="icon-user setting__nav-icon"></i>my account</a></li>
+											<li class="setting__nav-item"><a href="#" class="setting__nav-link"><i class="icon-heart setting__nav-icon"></i>wishlist</a></li>
+											<li class="setting__nav-item"><a href="#" class="setting__nav-link"><i class="icon-arrows-cw setting__nav-icon"></i>compare</a></li>
+											<li class="setting__nav-item"><a href="#" class="setting__nav-link"><i class="icon-ok-squared setting__nav-icon"></i>checkout</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="basket__wallet">
 						<img class="basket__wallet-icon" src="img/icons/wallet.png" alt="">
