Add block wallet

--- a/app/_header.html
+++ b/app/_header.html
@@ -126,9 +126,71 @@
 						</div>
 					</div>
 					<div class="basket__wallet">
-						<img class="basket__wallet-icon" src="img/icons/wallet.png" alt="">
-						<div class="basket__wallet-price">
-							<span class="basket__wallet-sum">2</span> item(s) - <span class="cart__wallet-total">$100.00</span>
+						<div class="basket__wallet-icon">
+							<i class="icon-basket"></i>
+							<div class="basket__wallet-price">
+								<span>2</span> item(s) - <span>$100.00</span>
+							</div>
+						</div>
+
+						<div class="wallet">
+							<div class="wallet__cart" id="wallet__cart_1">
+								<div class="wallet__cart-img">
+									<a href="#">
+									<img src="img/01.jpg" alt="">
+									</a>
+								</div>
+								<div class="wallet__cart-body">
+									<a class="wallet__cart-title" href="#">Mr. Coffee 10 Cup Coffee Maker</a>
+									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
+									<a class="wallet__cart-close" href="#">x</a>
+								</div>
+							</div>
+							<div class="wallet__cart">
+								<div class="wallet__cart-img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="wallet__cart-body">
+									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
+									<a class="wallet__cart-close" href="#">x</a>
+								</div>
+							</div>
+							<div class="wallet__cart">
+								<div class="wallet__cart-img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="wallet__cart-body">
+									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
+									<a class="wallet__cart-close" href="#">x</a>
+								</div>
+							</div>
+							<div class="wallet__cart">
+								<div class="wallet__cart-img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="wallet__cart-body">
+									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
+									<a class="wallet__cart-close" href="#">x</a>
+								</div>
+							</div>
+							<div class="wallet__cart">
+								<div class="wallet__cart-img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="wallet__cart-body">
+									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
+									<a class="wallet__cart-close" href="#">x</a>
+								</div>
+							</div>
+							<div class="wallet__subtotal">subtotal: <span>$15.00</span></div>
+							<div class="wallet__buttons">
+								<a class="wallet__buttons-btn" href="#">view cart</a>
+								<a class="wallet__buttons-btn wallet__buttons-btn--red" href="#">check out</a>
+							</div>
 						</div>
 					</div>
 				</div>
