--- a/app/contact-us.html
+++ b/app/contact-us.html
@@ -60,6 +60,238 @@
 				</div>
 			</div>
 			<!-- page-policy end -->
+			<!-- breadcrumbs -->
+			<div class="breadcrumbs">
+				<div class="container">
+					<ul class="breadcrumbs__list">
+						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Home</a></li>
+						<li class="breadcrumbs__item">Contact us</li>
+					</ul>
+				</div>
+			</div>
+			<!-- breadcrumbs end -->
+			<!-- contact-us -->
+			<div class="contact-us">
+				<div class="container">
+					<div class="contact-us__row">
+						<div class="contact-us__column">
+							<div class="contact-us__contact">
+								<div class="contact-us__contact-title">Contact Us</div>
+								<div class="contact-us__contact-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software.</div>
+							</div>
+							<div class="contact-us__offices">
+								<div class="contact-us__offices-title">Main offices</div>
+								<div class="contact-us__offices-row">
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/geo_fence_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Main office</div>
+											<div class="contact-us__offices-link">121 King Street, Melbourne Victoria 3000 Australia</div>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/iphone_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Phone number</div>
+											<a class="contact-us__offices-link" href="tel:+0123658479">+01 23 658 479</a>
+											<a class="contact-us__offices-link" href="tel:+0123658489">+01 23 658 489</a>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/domain_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Website & email</div>
+											<a class="contact-us__offices-link" href="#">snstheme.com</a>
+											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="contact-us__offices contact-us__agency">
+								<div class="contact-us__offices-title">our agency</div>
+								<div class="contact-us__offices-row contact-us__agency-row">
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/geo_fence_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Main office</div>
+											<div class="contact-us__offices-link">121 King Street, Melbourne Victoria 3000 Australia</div>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/iphone_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Phone number</div>
+											<a class="contact-us__offices-link" href="tel:+0123658479">+01 23 658 479</a>
+											<a class="contact-us__offices-link" href="tel:+0123658489">+01 23 658 489</a>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/domain_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Website & email</div>
+											<a class="contact-us__offices-link" href="#">snstheme.com</a>
+											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+										</div>
+									</div>
+								</div>
+								<div class="contact-us__offices-row contact-us__agency-row">
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/geo_fence_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Main office</div>
+											<div class="contact-us__offices-link">121 King Street, Melbourne Victoria 3000 Australia</div>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/iphone_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Phone number</div>
+											<a class="contact-us__offices-link" href="tel:+0123658479">+01 23 658 479</a>
+											<a class="contact-us__offices-link" href="tel:+0123658489">+01 23 658 489</a>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/domain_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Website & email</div>
+											<a class="contact-us__offices-link" href="#">snstheme.com</a>
+											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+										</div>
+									</div>
+								</div>
+								<div class="contact-us__offices-row contact-us__agency-row">
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/geo_fence_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Main office</div>
+											<div class="contact-us__offices-link">121 King Street, Melbourne Victoria 3000 Australia</div>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/iphone_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Phone number</div>
+											<a class="contact-us__offices-link" href="tel:+0123658479">+01 23 658 479</a>
+											<a class="contact-us__offices-link" href="tel:+0123658489">+01 23 658 489</a>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/domain_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Website & email</div>
+											<a class="contact-us__offices-link" href="#">snstheme.com</a>
+											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+										</div>
+									</div>
+								</div>
+								<div class="contact-us__offices-row contact-us__agency-row">
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/geo_fence_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Main office</div>
+											<div class="contact-us__offices-link">121 King Street, Melbourne Victoria 3000 Australia</div>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/iphone_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Phone number</div>
+											<a class="contact-us__offices-link" href="tel:+0123658479">+01 23 658 479</a>
+											<a class="contact-us__offices-link" href="tel:+0123658489">+01 23 658 489</a>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/domain_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Website & email</div>
+											<a class="contact-us__offices-link" href="#">snstheme.com</a>
+											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+										</div>
+									</div>
+								</div>
+								<div class="contact-us__offices-row contact-us__agency-row">
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/geo_fence_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Main office</div>
+											<div class="contact-us__offices-link">121 King Street, Melbourne Victoria 3000 Australia</div>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/iphone_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Phone number</div>
+											<a class="contact-us__offices-link" href="tel:+0123658479">+01 23 658 479</a>
+											<a class="contact-us__offices-link" href="tel:+0123658489">+01 23 658 489</a>
+										</div>
+									</div>
+									<div class="contact-us__offices-column">
+										<div class="contact-us__offices-img">
+											<img src="img/icons/domain_50px.png" alt="">
+										</div>
+										<div class="contact-us__offices-body">
+											<div class="contact-us__offices-name">Website & email</div>
+											<a class="contact-us__offices-link" href="#">snstheme.com</a>
+											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="contact-us__column">
+							<div class="contact-us__map">
+								<img src="img/contact/map.jpg" alt="">
+							</div>
+							<div class="contact-us__message">
+								<div class="contact-us__message-title">Send me a message</div>
+								<form action="#" class="contact-us__message-form">
+									<input class="contact-us__message-text" type="text" placeholder="Yout name" required>
+									<input class="contact-us__message-email" type="email" name="#" id="#" placeholder="Your Email" required>
+									<input class="contact-us__message-phone" type="tel" name="#" id="#" placeholder="Phone" required>
+									<input class="contact-us__message-website" type="email" name="#" id="#" placeholder="Website" required>
+									<textarea class="contact-us__message-message" name="#" id="#" placeholder="Your message" required></textarea>
+									<button class="contact-us__message-btn btn">Send message</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- contact-us -->
 		</main>
 		@@include('_footer.html')
 	</div>
