Add page all-categories with adaptive

--- a/app/_header.html
+++ b/app/_header.html
@@ -1,7 +1,7 @@
 	<header class="header">
 			<div class="header__container container">
 
-				<a class="header__logo" href="#">
+				<a class="header__logo" href="index.html">
 					<img class="header__logo-link" src="img/header/logo.png" alt="">
 				</a>
 
@@ -10,7 +10,7 @@
 				</div>
 				<nav class="menu">
 					<ul class="menu__list">           
-						<li class="menu__item menu__item-dropdown"><a class="menu__link" href="#">Home</a>
+						<li class="menu__item menu__item-dropdown"><a class="menu__link" href="index.html">Home</a>
 							<ul class="menu__submenu">
 								<div class="menu__submenu-row">
 									<div class="menu__submenu-column">
@@ -58,7 +58,7 @@
 								</div>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link" href="#">Shop</a></li>
+						<li class="menu__item"><a class="menu__link" href="all-categories.html">Shop</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
