--- a/app/all-categories.html
+++ b/app/all-categories.html
@@ -21,7 +21,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/02.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -34,7 +34,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img all-categories__img--bg">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/05-1.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -47,7 +47,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/01.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -60,7 +60,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/03.png" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -73,7 +73,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/04.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -86,7 +86,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/11.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -99,7 +99,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/06.png" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -112,7 +112,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/07.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -125,7 +125,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/08.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -138,7 +138,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/09.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
@@ -151,7 +151,7 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/all-categories/10.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
