--- a/app/_header.html
+++ b/app/_header.html
@@ -61,7 +61,7 @@
 						<li class="menu__item"><a class="menu__link" href="all-categories.html">Shop</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
-						<li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
+						<li class="menu__item"><a class="menu__link" href="blog-list.html">Blog</a></li>
 						<li class="menu__item"><a class="menu__link" href="contact-us.html">Contact us</a></li>
 						<li class="menu__item menu__item-search"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
 						<div class="search">
@@ -74,7 +74,7 @@
 					</ul>
 				</nav>
 
-				<div class="basket">
+				<div class="header__basket basket">
 					<div class="basket__setting">
 						<div class="basket__setting-icon">
 							<i class="icon-cog"></i>
