--- a/app/_header.html
+++ b/app/_header.html
@@ -61,7 +61,13 @@
 						<li class="menu__item"><a class="menu__link" href="all-categories.html">Shop</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
-						<li class="menu__item"><a class="menu__link" href="blog-default.html">Blog</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Blog</a>
+							<ul class="menu__dropdown">
+								<li class="menu__item menu__dropdown-item"><a href="blog-col.html" class="menu__link menu__dropdown-link">blog col</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="blog-default.html" class="menu__link menu__dropdown-link">blog default</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="blog-list.html" class="menu__link menu__dropdown-link">blog list</a></li>
+							</ul>
+						</li>
 						<li class="menu__item"><a class="menu__link" href="contact-us.html">Contact us</a></li>
 						<li class="menu__item menu__item-search"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
 						<div class="search">
