Add images for pages blog

--- a/app/blog-default.html
+++ b/app/blog-default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	@@include('_head.html',{
-		"title":"Home"
+		"title":"Blog default"
 	})
 <body>
 
@@ -26,7 +26,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/blog/02.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -40,7 +40,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/blog/03.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -55,7 +55,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/blog/01.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -69,7 +69,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/news/05.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -79,35 +79,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="blog-list__column">
-									<div class="blog-list__item">
-										<div class="blog-list__item-img">
-											<a href="#">
-												<img src="img/01.jpg" alt="">
-											</a>
-										</div>
-										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>
-											<a class="blog-list__item-btn btn" href="#">Read more</a>
-										</div>
-									</div>
-								</div>
-								<div class="blog-list__column">
-									<div class="blog-list__item">
-										<div class="blog-list__item-img">
-											<a href="#">
-												<img src="img/01.jpg" alt="">
-											</a>
-										</div>
-										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>											<a class="blog-list__item-btn btn" href="#">Read more</a>
-										</div>
-									</div>
-								</div>
+
 
 							</div>
 
@@ -151,7 +123,7 @@
 								<a href="#"> 
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/01.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">2016 Summer Women Chiffon Short</div>
@@ -162,7 +134,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/02.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Cappuccino Cooler</div>
@@ -173,7 +145,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/03.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Flavored Latte</div>
@@ -184,7 +156,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/04.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Coconut Oil Coffee</div>
@@ -195,7 +167,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/05.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">How to Make a Latte</div>
@@ -228,7 +200,7 @@
 							<!-- sidebar-block -->
 							<div class="sidebar-block">
 								<div class="sidebar-block__img">
-									<img src="img/01.jpg" alt="">
+									<img src="img/newsletter/bg.jpg" alt="">
 								</div>
 							</div>
 							<!-- sidebar-block end -->
