--- a/app/blog-col.html
+++ b/app/blog-col.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	@@include('_head.html',{
-		"title":"Home"
+		"title":"Blog col"
 	})
 <body>
 
@@ -26,7 +26,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/news/03.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -40,7 +40,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/blog/03.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -55,7 +55,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/news/02.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -69,7 +69,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/news/04.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -83,7 +83,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/news/05.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -98,7 +98,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/01.jpg" alt="">
+												<img src="img/news/01.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
@@ -151,7 +151,7 @@
 								<a href="#"> 
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/01.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">2016 Summer Women Chiffon Short</div>
@@ -162,7 +162,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/02.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Cappuccino Cooler</div>
@@ -173,7 +173,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/03.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Flavored Latte</div>
@@ -184,7 +184,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/04.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Coconut Oil Coffee</div>
@@ -195,7 +195,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/05.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">How to Make a Latte</div>
@@ -228,7 +228,7 @@
 							<!-- sidebar-block -->
 							<div class="sidebar-block">
 								<div class="sidebar-block__img">
-									<img src="img/01.jpg" alt="">
+									<img src="img/newsletter/bg.jpg" alt="">
 								</div>
 							</div>
 							<!-- sidebar-block end -->
