--- a/app/blog-list.html
+++ b/app/blog-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	@@include('_head.html',{
-		"title":"Home"
+		"title":"Blog list"
 	})
 <body>
 
@@ -23,7 +23,7 @@
 							<div class="blog-list__item">
 								<div class="blog-list__item-img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/03.jpg" alt="">
 									</a>
 								</div>
 								<div class="blog-list__item-body">
@@ -36,7 +36,7 @@
 							<div class="blog-list__item">
 								<div class="blog-list__item-img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/blog/02.jpg" alt="">
 									</a>
 								</div>
 								<div class="blog-list__item-body">
@@ -49,7 +49,7 @@
 							<div class="blog-list__item">
 								<div class="blog-list__item-img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/blog/03.jpg" alt="">
 									</a>
 								</div>
 								<div class="blog-list__item-body">
@@ -62,7 +62,7 @@
 							<div class="blog-list__item">
 								<div class="blog-list__item-img">
 									<a href="#">
-										<img src="img/01.jpg" alt="">
+										<img src="img/blog/01.jpg" alt="">
 									</a>
 								</div>
 								<div class="blog-list__item-body">
@@ -119,7 +119,7 @@
 								<a href="#"> 
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/01.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">2016 Summer Women Chiffon Short</div>
@@ -130,7 +130,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/02.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Cappuccino Cooler</div>
@@ -141,7 +141,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/03.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Flavored Latte</div>
@@ -152,7 +152,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/04.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">Coconut Oil Coffee</div>
@@ -163,7 +163,7 @@
 								<a href="#">
 									<div class="sidebar-post__item">
 									<div class="sidebar-post__item-img">
-										<img src="img/01.jpg" alt="">
+										<img src="img/news/05.jpg" alt="">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">How to Make a Latte</div>
@@ -196,7 +196,7 @@
 							<!-- sidebar-block -->
 							<div class="sidebar-block">
 								<div class="sidebar-block__img">
-									<img src="img/01.jpg" alt="">
+									<img src="img/newsletter/bg.jpg" alt="">
 								</div>
 							</div>
 							<!-- sidebar-block end -->
