Add page shop-col with block sidebar-nav

--- a/app/_header.html
+++ b/app/_header.html
@@ -58,7 +58,12 @@
 								</div>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link" href="all-categories.html">Shop</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Shop</a>
+							<ul class="menu__dropdown">
+								<li class="menu__item menu__dropdown-item"><a href="all-categories.html" class="menu__link menu__dropdown-link">all categories</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
+							</ul>
+						</li>
 						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Blog</a>
