--- a/app/index.html
+++ b/app/index.html
@@ -473,7 +473,7 @@
 				</div>
 				<!-- featured end -->
 				<!-- policy -->
-				<div class="policy">
+				<div class="policy policy--black">
 					<div class="policy__row">
 						<div class="policy__column">
 							<div class="policy__item">
