Add complete sidebar

--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -77,7 +77,7 @@
 						<div class="shop-col__sidebar">
 
 							<!-- sidebar-nav -->
-							<div class="sidebar-nav">
+							<div class="shop-col__sidebar-nav sidebar-nav">
 								<div class="sidebar-nav__title">All Categories</div>
 								<ul class="sidebar-nav__list">
 									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffee Machines</a></li>
@@ -173,16 +173,14 @@
 							<!-- sidebar-nav end -->
 
 							<!-- sidebar-new -->
-							<div class="sidebar-new">
+							<div class="shop-col__sidebar-new sidebar-new">
 								<div class="sidebar-new__title sidebar__title">New arrival</div>
 								<a href="#"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
 											<img src="img/cart/04.jpg" alt="">
 										</div>
-										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
-										</div>
+										<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
 									</div>
 								</a>
 								<a href="#"> 
@@ -219,23 +217,27 @@
 							<!-- sidebar-new end -->
 
 							<!-- sidebar-block -->
-							<div class="sidebar-block">
+							<div class="shop-col__sidebar-block sidebar-block">
 								<div class="sidebar-block__img">
-									<img src="img/newsletter/bg.jpg" alt="">
+									<a href="#">
+										<img src="img/newsletter/bg.jpg" alt="">
+									</a>
 								</div>
 							</div>
 							<!-- sidebar-block end -->
 
 							<!-- sidebar-news -->
-							<div class="sidebar-news">
+							<div class="shop-col__sidebar-news sidebar-news">
 								<div class="sidebar-news__title sidebar__title">latest NEWS</div>
 								<a href="#"> 
 									<div class="sidebar-news__item">
 										<div class="sidebar-news__item-img">
-											<img src="img/cart/04.jpg" alt="">
+											<a href="#">
+												<img src="img/news/03.jpg" alt="">
+											</a>
 										</div>
 										<div class="sidebar-news__item-body">
-											<div class="sidebar-news__item-title">2016 Summer Women Chiffon Short | <span>By KOMODOART</span></div>
+											<a class="sidebar-news__item-title" href="#">2016 Summer Women Chiffon Short | <span>By KOMODOART</span></a>
 											<div class="sidebar-news__item-descr">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</div>
 											<a class="sidebar-news__item-btn btn" href="#">Read more</a>
 										</div>
@@ -245,7 +247,7 @@
 							<!-- sidebar-news end -->
 
 							<!-- sidebar-tags -->
-							<div class="sidebar-tags">
+							<div class="shop-col__sidebar-tags sidebar-tags">
 								<div class="sidebar-tags__title sidebar__title">Popular tags</div>
 								<ul class="sidebar-tags__list">
 									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Shopping</a></li>
